--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,17 @@ a {
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
+}
+
+.icon--white {
+    fill: #fff;
 }
 
 .icon-container {
@@ -177,6 +186,10 @@ a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+
+.icon-container--accent {
+    background-color: var(--color-accent);
 }
 
 /* Buttons */
@@ -445,5 +458,37 @@ a {
 @media screen and (min-width: 1024) {
     .grid--1x2 {
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+/* Testimonial */
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial__image {
+    position: relative;
+}
+
+.testimonial__image > img {
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    width: 60px;
+    height: 60px;
+    right: -30px;
+}
+
+@media screen and (min-width: 1024) {
+    .testimonial .quote {
+        font-size: 2.4rem;
+        margin-left: 6rem;
+    }
+
+    .testimonial .quote__author {
+        font-size: 2rem;
     }
 }
