--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ a {
 }
 
 .icon-container--accent {
-    background-color: var(--color-accent);
+    background: var(--color-accent);
 }
 
 /* Buttons */
@@ -536,4 +536,36 @@ a {
         justify-self: start;
         margin: 0 2rem;
     }
+}
+
+/* Collapsible */
+.collapsible__header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.collapsible__heading {
+    margin-top: 0;
+    font-size: 3rem;
+}
+
+.collapsible__chevron {
+    transform: rotate(-90deg);
+    transition: transform 0.3s;
+}
+
+.collapsible__content {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.collapsible--expanded .collapsible__chevron {
+    transform: rotate(0);
+}
+
+.collapsible--expanded .collapsible__content {
+    max-height: 100vh;
+    opacity: 1;
 }
