--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,14 @@ a {
 .card--secondary .badge--secondary {
     background: #02cdf1;
 }
+
+.card--primary .badge--primary {
+    background: #2274e1;
+}
 /* Plans */
+.plan {
+    transition: transform 0.2s ease-out;
+}
 .plan__name {
     color: #fff;
     margin: 0;
@@ -362,6 +369,10 @@ a {
     margin-bottom: 2rem;
 }
 
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header {
     position: relative;
 }
@@ -373,6 +384,14 @@ a {
     position: absolute;
     top: -6px;
     right: 5%;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -469,9 +488,9 @@ a {
     }
 }
 
-@media screen and (min-width: 1024) {
-    .grid--1x2 {
-        grid-template-columns: 1fr 1fr 1fr;
+@media screen and (min-width: 1024px) {
+    .grid--1x3 {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
@@ -729,4 +748,14 @@ a {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
+}
+
+/* Plans Block */
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
 }
