--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,7 @@ a {
     font-weight: 500;
     font-style: normal;
     margin-bottom: 0;
+    color: #1b0760;
 }
 
 .quote__organization {
@@ -614,6 +615,7 @@ a {
 
 .block__header {
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .block__heading {
